# Operating-Systems

./: LICENSE  README.md
assignment/Assignment1/Part_1/Test_Cases/Testcase1/IITK/Postgraduate/: details.txt
assignment/Assignment1/Part_1/Test_Cases/Testcase2/: mygrep
assignment/Assignment1/Part_1/src/: part1.c
assignment/Assignment1/Part_2/Test_Cases/Testcase2/: output1.txt  part2
assignment/Assignment1/Part_2/src/: part2.c
assignment/Assignment1/Part_3/Samples_Explanation/: part3
assignment/Assignment1/Part_3/Test_Cases/Testcase1/: part3
assignment/Assignment1/Part_3/Test_Cases/Testcase2/: tmp.txt
assignment/Assignment1/Part_3/src/: part3  part3.c  tmp.txt
assignment/Assignment2/: .gitignore
assignment/Assignment2/gemOS/src/: CMakeLists.txt  file.c  gemOS.kernel  pipe.c
assignment/Assignment2/gemOS/src/include/: file.h
assignment/Assignment2/gemOS/src/user/: init.c
assignment/Assignment2/gemOS/src/user/test_cases/: testcase3.c  testcase4.c
assignment/Assignment3/src/: CMakeLists.txt  cfork.c  gemOS.kernel
assignment/Assignment3/src/160575/: cfork.c  mmap.c
assignment/Assignment3/src/user/: init.c
assignment/Assignment3/src/user/Testcases/Task-1/: testcase4.c  testcase6.c
assignment/Assignment4/: CMakeLists.txt
assignment/Assignment4/part-1/: blockhash  thread_func.c
assignment/Assignment4/part-1/tmp/: something.txt
assignment/Assignment4/part-2/: rwlock  rwlock.c
assignment/Assignment4/part-3/: common.h  inputgen  parallel_hash  parallel_hash.c  serial_hash
